# inferential-analysis

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/inferential_analysis/: __init__.py  hello_world.py  inferential_analysis.py
tests/inferential_analysis/: test_hello_world.py  test_inferential_analysis.py
tests/inferential_analysis/evaluation_data/: aghajanyan_cnn-all.csv  aghajanyan_cnn-best.csv
